--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
 	"main"    : "index.html",
 	"window"  : {
 		"toolbar" : false,
-		"width"   : 340,
-		"height"  : 340
+		"width"   : "340",
+		"height"  : "340"
 	},
 
 	"devDependencies": {
 		"grunt"                     : "~0.4.2",
 		"grunt-dogescript"          : "~0.4.0",
-		"grunt-contrib-uglify"      : "~0.2.7"
+		"grunt-contrib-uglify"      : "~0.2.7",
+		"grunt-contrib-clean"       : "~0.5.0"
 	}
 }
